# flask-cors

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  build.sh  example.py  flask_cors.py  index.html  mkdocs.yml  objects.inv  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  sitemap.xml  test.py  tox.ini
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml  on-release-main.yml  release.yml  unittests.yaml
decorator/: index.html
docs/: Makefile  api.rst  conf.py  configuration.rst  decorator.md  extension.md  index.md  index.rst  requirements.txt
docs/examples/: blueprints.md  decorator.md  extension.md
examples/: app_based_example.py  blueprints_based_example.py  example_app_based.py  example_view_based.py  simple_example.py  view_based_example.py
examples/blueprints/: index.html
examples/decorator/: index.html
examples/extension/: index.html
extension/: index.html
flask_cors/: __init__.py  _version.py  core.py  decorator.py  extension.py  version.py
requirements/: README.rst
requirements/test/: pyproject.toml  requirements.txt
search/: search_index.json
tests/: __init__.py  base_test.py  helper_tests.py  test_allow_headers.py  test_app_extension.py  test_credentials.py  test_exception_interception.py  test_expose_headers.py  test_headers.py  test_max_age.py  test_methods.py  test_options.py  test_origins.py  test_vary_header.py  test_w3.py
tests/core/: __init__.py  helper_tests.py  test_helpers.py  test_override_headers.py
tests/decorator/: __init__.py  test_allow_headers.py  test_credentials.py  test_duplicate_headers.py  test_exception_interception.py  test_expose_headers.py  test_invalid_cors_response_status_code.py  test_max_age.py  test_methods.py  test_options.py  test_origins.py  test_private_network_headers.py  test_vary_header.py  test_w3.py
tests/extension/: __init__.py  test_app_extension.py
